--- a/moments/Base.lproj/Main.storyboard
+++ b/moments/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                     <action selector="signIn:" destination="e9V-yt-wi6" eventType="touchUpInside" id="MNg-2F-Da4"/>
                                 </connections>
                             </button>
-                            <navigationBar contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="whu-Ge-M3y">
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="whu-Ge-M3y">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <items>
                                     <navigationItem title="Moments" id="C5q-RA-cT9"/>
@@ -37,8 +37,10 @@
                             <constraint firstItem="4qv-B6-lFs" firstAttribute="centerX" secondItem="YoR-tc-faO" secondAttribute="centerX" id="1yr-8K-PN1"/>
                             <constraint firstItem="4qv-B6-lFs" firstAttribute="leading" secondItem="YoR-tc-faO" secondAttribute="leadingMargin" constant="43" id="58U-CK-9rA"/>
                             <constraint firstItem="haL-Sd-Kfb" firstAttribute="top" secondItem="4qv-B6-lFs" secondAttribute="bottom" constant="305" id="9u8-Wh-5hk"/>
+                            <constraint firstItem="whu-Ge-M3y" firstAttribute="top" secondItem="EZF-BK-lgu" secondAttribute="bottom" id="O2x-xS-94g"/>
+                            <constraint firstItem="whu-Ge-M3y" firstAttribute="centerX" secondItem="4qv-B6-lFs" secondAttribute="centerX" id="RVg-Rm-SBt"/>
+                            <constraint firstItem="whu-Ge-M3y" firstAttribute="leading" secondItem="YoR-tc-faO" secondAttribute="leading" id="Wzr-rM-7fK"/>
                             <constraint firstItem="4qv-B6-lFs" firstAttribute="centerY" secondItem="YoR-tc-faO" secondAttribute="centerY" id="nDT-Rh-VJ7"/>
-                            <constraint firstItem="4qv-B6-lFs" firstAttribute="centerX" secondItem="whu-Ge-M3y" secondAttribute="centerX" id="pA7-pE-otA"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
@@ -62,7 +64,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" layoutMarginsFollowReadableWidth="YES" mapType="standard" showsUserLocation="YES" showsBuildings="NO" showsPointsOfInterest="NO" translatesAutoresizingMaskIntoConstraints="NO" id="daW-g0-znu">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" mapType="standard" showsUserLocation="YES" showsBuildings="NO" showsPointsOfInterest="NO" translatesAutoresizingMaskIntoConstraints="NO" id="daW-g0-znu">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="tintColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </mapView>
@@ -76,7 +78,7 @@
                                     <action selector="centerMapOnUser" destination="BYZ-38-t0r" eventType="touchUpInside" id="xis-Ou-SAo"/>
                                 </connections>
                             </button>
-                            <navigationBar contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9K3-xK-8kp">
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9K3-xK-8kp">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <items>
                                     <navigationItem title="Moments" id="Swo-HB-ZLc"/>
@@ -95,15 +97,19 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="daW-g0-znu" firstAttribute="centerX" secondItem="rsK-Ol-Re6" secondAttribute="centerX" id="1da-2J-K77"/>
                             <constraint firstItem="gJ6-ID-hfC" firstAttribute="bottom" secondItem="rsK-Ol-Re6" secondAttribute="bottom" id="1f1-pZ-W0G"/>
                             <constraint firstAttribute="trailingMargin" secondItem="gJ6-ID-hfC" secondAttribute="trailing" constant="4" id="E07-cL-Swt"/>
+                            <constraint firstItem="daW-g0-znu" firstAttribute="trailing" secondItem="9K3-xK-8kp" secondAttribute="trailing" id="JJa-B0-N4a"/>
                             <constraint firstItem="gJ6-ID-hfC" firstAttribute="top" secondItem="rsK-Ol-Re6" secondAttribute="top" id="Jws-vf-joe"/>
-                            <constraint firstItem="rsK-Ol-Re6" firstAttribute="centerX" secondItem="9K3-xK-8kp" secondAttribute="centerX" id="Nkz-dg-gsG"/>
+                            <constraint firstItem="9K3-xK-8kp" firstAttribute="top" secondItem="6K7-rb-XAx" secondAttribute="bottom" id="REc-Xp-fZu"/>
                             <constraint firstItem="rsK-Ol-Re6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="W1z-dT-L4i"/>
-                            <constraint firstItem="rsK-Ol-Re6" firstAttribute="centerX" secondItem="daW-g0-znu" secondAttribute="centerX" id="XGz-mb-epj"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="daW-g0-znu" secondAttribute="bottom" constant="-14" id="esk-xV-uXd"/>
+                            <constraint firstItem="daW-g0-znu" firstAttribute="bottom" secondItem="nn8-D8-tqD" secondAttribute="top" id="iZq-Q6-bfw"/>
                             <constraint firstItem="gJ6-ID-hfC" firstAttribute="leading" secondItem="rsK-Ol-Re6" secondAttribute="trailing" constant="52" id="oj5-kP-uuv"/>
+                            <constraint firstItem="daW-g0-znu" firstAttribute="top" secondItem="9K3-xK-8kp" secondAttribute="bottom" id="p10-mG-ukf"/>
                             <constraint firstItem="rsK-Ol-Re6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="87" id="tnh-NO-4oD"/>
+                            <constraint firstItem="daW-g0-znu" firstAttribute="leading" secondItem="9K3-xK-8kp" secondAttribute="leading" id="xLH-ba-Bnx"/>
+                            <constraint firstItem="9K3-xK-8kp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="xiS-1P-PHl"/>
                             <constraint firstAttribute="bottom" secondItem="gJ6-ID-hfC" secondAttribute="bottom" constant="20" symbolic="YES" id="zKj-4P-TGT"/>
                         </constraints>
                     </view>
@@ -157,7 +163,7 @@
                                     <segue destination="BYZ-38-t0r" kind="show" id="snN-rN-KU8"/>
                                 </connections>
                             </button>
-                            <navigationBar contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gEo-Yo-mEJ">
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gEo-Yo-mEJ">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <items>
                                     <navigationItem title="Moments" id="Yxk-o3-xWw">
@@ -179,10 +185,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="3yZ-JB-v6H" firstAttribute="centerX" secondItem="gEo-Yo-mEJ" secondAttribute="centerX" id="1Qq-n0-nih"/>
+                            <constraint firstItem="gEo-Yo-mEJ" firstAttribute="centerX" secondItem="3yZ-JB-v6H" secondAttribute="centerX" id="4nA-ep-OQr"/>
                             <constraint firstItem="xOR-p4-QCr" firstAttribute="top" secondItem="FGF-4T-9ZN" secondAttribute="top" id="92c-0M-Zed"/>
-                            <constraint firstItem="FGF-4T-9ZN" firstAttribute="top" secondItem="gEo-Yo-mEJ" secondAttribute="bottom" constant="41" id="C6k-9n-RLU"/>
-                            <constraint firstItem="irx-hI-R8D" firstAttribute="centerX" secondItem="gEo-Yo-mEJ" secondAttribute="centerX" id="Me4-7r-cLB"/>
+                            <constraint firstItem="gEo-Yo-mEJ" firstAttribute="centerX" secondItem="irx-hI-R8D" secondAttribute="centerX" id="BN9-N4-GFy"/>
+                            <constraint firstItem="gEo-Yo-mEJ" firstAttribute="centerX" secondItem="jYn-YH-qCF" secondAttribute="centerX" id="Kx0-ig-fj7"/>
+                            <constraint firstItem="gEo-Yo-mEJ" firstAttribute="leading" secondItem="L6r-bc-ZDh" secondAttribute="leading" id="LU5-vE-6yr"/>
                             <constraint firstItem="xOR-p4-QCr" firstAttribute="leading" secondItem="FGF-4T-9ZN" secondAttribute="leading" id="RH0-p0-U4u"/>
                             <constraint firstItem="irx-hI-R8D" firstAttribute="top" secondItem="3yZ-JB-v6H" secondAttribute="bottom" constant="22" id="Rgh-zN-yUC"/>
                             <constraint firstItem="PMf-Bm-YQB" firstAttribute="top" secondItem="FGF-4T-9ZN" secondAttribute="bottom" constant="8" symbolic="YES" id="TRc-ru-zvR"/>
@@ -191,8 +198,8 @@
                             <constraint firstItem="PMf-Bm-YQB" firstAttribute="leading" secondItem="FGF-4T-9ZN" secondAttribute="leading" id="kRc-pz-4gI"/>
                             <constraint firstItem="jYn-YH-qCF" firstAttribute="top" secondItem="irx-hI-R8D" secondAttribute="bottom" constant="24" id="m09-il-jqj"/>
                             <constraint firstItem="PMf-Bm-YQB" firstAttribute="leading" secondItem="L6r-bc-ZDh" secondAttribute="leadingMargin" constant="-2" id="mSG-pa-T2T"/>
-                            <constraint firstItem="jYn-YH-qCF" firstAttribute="centerX" secondItem="gEo-Yo-mEJ" secondAttribute="centerX" id="osf-aw-WNv"/>
                             <constraint firstItem="jYn-YH-qCF" firstAttribute="centerX" secondItem="L6r-bc-ZDh" secondAttribute="centerX" id="ruw-eU-pZi"/>
+                            <constraint firstItem="gEo-Yo-mEJ" firstAttribute="top" secondItem="Dfl-fa-xrq" secondAttribute="bottom" id="u6W-Nz-Vjo"/>
                             <constraint firstItem="PMf-Bm-YQB" firstAttribute="top" secondItem="L6r-bc-ZDh" secondAttribute="top" constant="329" id="yzb-pG-jKX"/>
                             <constraint firstItem="3yZ-JB-v6H" firstAttribute="top" secondItem="PMf-Bm-YQB" secondAttribute="bottom" constant="8" symbolic="YES" id="zdd-lF-WrO"/>
                         </constraints>
@@ -213,6 +220,6 @@
         <image name="fb_login" width="580" height="124"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Do6-xb-96j"/>
+        <segue reference="ipg-dQ-eql"/>
     </inferredMetricsTieBreakers>
 </document>
